<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">z
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/question_4" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question4"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>
        <RadioGroup
            android:id="@+id/radio4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q4_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
             />

            <RadioButton
                android:id="@+id/q4_n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
               />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/question_5" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question5"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>
        <RadioGroup
            android:id="@+id/radio5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q5_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
              />

            <RadioButton
                android:id="@+id/q5_n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
              />
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/question_6" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question6"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>
        <RadioGroup
            android:id="@+id/radio6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q6_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
              />

            <RadioButton
                android:id="@+id/q6_n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
               />
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/question_7" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question7"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>
        <RadioGroup
            android:id="@+id/radio7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q7_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
              />

            <RadioButton
                android:id="@+id/q7_n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/question_8" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question8"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>
        <RadioGroup
            android:id="@+id/radio8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q8_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
             />

            <RadioButton
                android:id="@+id/q8_n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                />
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/question_9" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question9"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>
        <RadioGroup
            android:id="@+id/radio9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q9_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                />

            <RadioButton
                android:id="@+id/q9_n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                />
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/question_10" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question10"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>
        <RadioGroup
            android:id="@+id/radio10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q10_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
               />

            <RadioButton
                android:id="@+id/q10_n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/question_11" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question11"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>
        <RadioGroup
            android:id="@+id/radio11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q11_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
          />

            <RadioButton
                android:id="@+id/q11_n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
              />
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/question_12" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question12"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>
        <RadioGroup
            android:id="@+id/radio12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q12_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                />

            <RadioButton
                android:id="@+id/q12_n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                />
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/question_13" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question13"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>
        <RadioGroup
            android:id="@+id/radio13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q13_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                />

            <RadioButton
                android:id="@+id/q13_n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
              />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/question_14" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question14"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>
        <RadioGroup
            android:id="@+id/radio14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q14_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                />

            <RadioButton
                android:id="@+id/q14_n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                />
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/question_15" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question15"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>
        <RadioGroup
            android:id="@+id/radio15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q15_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                />

            <RadioButton
                android:id="@+id/q15_n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                />
        </RadioGroup>
        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <Button
                android:id="@+id/button"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="submitFinal"
                android:shadowColor="#A8A8A8"
                android:shadowDx="2"
                android:shadowDy="3"
                android:shadowRadius="6"
                android:text="@string/submit"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
    </RelativeLayout>
    </LinearLayout>

</ScrollView>