<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:id="@+id/scroll"
    android:layout_height="wrap_content"
    android:layout_marginRight="8dp"
    android:layout_marginLeft="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio1">

            <RadioButton
                android:id="@+id/q1_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                />

            <RadioButton
                android:id="@+id/q1_n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_2"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio2">

            <RadioButton
                android:id="@+id/q2_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                />

            <RadioButton
                android:id="@+id/q2_n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_3"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio3">

            <RadioButton
                android:id="@+id/q3_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                />

            <RadioButton
                android:id="@+id/q3_n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                />
        </RadioGroup>
    </LinearLayout>
</ScrollView>
