<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.shohayeb.areyoudepressed.MainActivity"
    >

    <TextView
        android:id="@+id/depression"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/depression"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/depression"
        android:layout_marginTop="16sp"
        android:lineSpacingExtra="8sp"
        android:text="@string/d_description"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/ready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="52dp"
        android:text="@string/test" />

    <Button
        android:id="@+id/button"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="start"
        android:shadowColor="#A8A8A8"
        android:shadowDx="2"
        android:shadowDy="3"
        android:shadowRadius="6"
        android:text="@string/start"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />




</RelativeLayout>
